@@ -2,21 +2,23 @@ package org.opentripplanner.routing.algorithm.raptor.transit;
 
 import org.opentripplanner.model.Stop;
 
+import javax.annotation.Nullable;
 import java.time.LocalDate;
 import java.time.ZoneId;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 public class TransitLayer {
 
   /**
-   * Transit data required for routing
+   * Transit data required for routing, indexed by each local date(Graph TimeZone) it runs through.
+   * A Trip "runs through" a date if any of its arrivals or departures is happening on that date.
    */
-  private final HashMap<LocalDate, List<TripPatternForDate>> tripPatternsForDate;
+  private final HashMap<LocalDate, List<TripPatternForDate>> tripPatternsRunningOnDate;
 
   /**
    * Index of outer list is from stop index, inner list index has no specific meaning. To stop index
@@ -38,7 +40,7 @@ public class TransitLayer {
    */
   public TransitLayer(TransitLayer transitLayer) {
     this(
-        transitLayer.tripPatternsForDate,
+        transitLayer.tripPatternsRunningOnDate,
         transitLayer.transferByStopIndex,
         transitLayer.stopIndex,
         transitLayer.transitDataZoneId
@@ -46,12 +48,12 @@ public class TransitLayer {
   }
 
   public TransitLayer(
-      Map<LocalDate, List<TripPatternForDate>> tripPatternsForDate,
+      Map<LocalDate, List<TripPatternForDate>> tripPatternsRunningOnDate,
       List<List<Transfer>> transferByStopIndex,
       StopIndexForRaptor stopIndex,
       ZoneId transitDataZoneId
   ) {
-    this.tripPatternsForDate = new HashMap<>(tripPatternsForDate);
+    this.tripPatternsRunningOnDate = new HashMap<>(tripPatternsRunningOnDate);
     this.transferByStopIndex = transferByStopIndex;
     this.stopIndex = stopIndex;
     this.transitDataZoneId = transitDataZoneId;
@@ -61,6 +63,7 @@ public class TransitLayer {
     return stopIndex.indexByStop.get(stop);
   }
 
+  @Nullable
   public Stop getStopByIndex(int stop) {
     return stop != -1 ? this.stopIndex.stopsByIndex.get(stop) : null;
   }
@@ -70,7 +73,7 @@ public class TransitLayer {
   }
 
   public Collection<TripPatternForDate> getTripPatternsForDate(LocalDate date) {
-    return tripPatternsForDate.getOrDefault(date, Collections.emptyList());
+    return tripPatternsRunningOnDate.getOrDefault(date, List.of());
   }
 
   /**
@@ -88,9 +91,17 @@ public class TransitLayer {
     return stopIndex.stopsByIndex.size();
   }
 
-  public List<TripPatternForDate> getTripPatternsForDateCopy(LocalDate date) {
-    List<TripPatternForDate> tripPatternForDate = tripPatternsForDate.get(date);
-    return tripPatternForDate != null ? new ArrayList<>(tripPatternsForDate.get(date)) : null;
+  public List<TripPatternForDate> getTripPatternsRunningOnDateCopy(LocalDate runningPeriodDate) {
+    List<TripPatternForDate> tripPatternForDate = tripPatternsRunningOnDate.get(runningPeriodDate);
+    return tripPatternForDate != null ? new ArrayList<>(tripPatternForDate) : null;
+  }
+
+  public List<TripPatternForDate> getTripPatternsStartingOnDateCopy(LocalDate date) {
+    List<TripPatternForDate> tripPatternsRunningOnDate = getTripPatternsRunningOnDateCopy(date);
+    return tripPatternsRunningOnDate != null ? tripPatternsRunningOnDate
+        .stream()
+        .filter(t -> t.getLocalDate().equals(date))
+        .collect(Collectors.toList()) : null;
   }
 
   public List<List<Transfer>> getTransferByStopIndex() {
@@ -105,6 +116,6 @@ public class TransitLayer {
       LocalDate date,
       List<TripPatternForDate> tripPatternForDates
   ) {
-    this.tripPatternsForDate.replace(date, tripPatternForDates);
+    this.tripPatternsRunningOnDate.replace(date, tripPatternForDates);
   }
 }
